# rustuary

./: .gitignore  .golangci.yml  .mise.toml  .pre-commit-config.yaml  .tool-versions  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  Makefile  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  TASKS.md  justfile  package.json  pnpm-lock.yaml  rust-toolchain.toml
.codex/: config.example.toml
.codex/prompts/: add-python-binding.md  implement-actuarial-method.md  review-actuarial-change.md  update-api-contract.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: actuarial-method.yml  bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
.mcp/: svelte-remote.json
apps/workbench/: AGENTS.md  README.md  package.json
bindings/python/: AGENTS.md  README.md  pyproject.toml
bindings/python/examples/: chain_ladder.py
bindings/python/rust/: Cargo.toml
bindings/python/rust/src/: lib.rs
bindings/python/src/rustuary/: __init__.py  _claims.py  _dataframe.py  chain_ladder.py  errors.py  mapping.py  metadata.py  triangle.py  triangle_builder.py  triangle_definition.py  triangle_set.py
bindings/python/tests/: test_chain_ladder.py  test_example_fixtures.py  test_mapping.py  test_notebook.py  test_rust_binding.py  test_triangle.py  test_triangle_builder.py  test_triangle_definition.py  test_triangle_set.py
contracts/: DATA_CONTRACTS.md  README.md
contracts/examples/: claims_mapping.yaml  (+3 more)
infra/: README.md  docker-compose.yml
notebooks/: 01_chain_ladder_workbench.ipynb  README.md
scripts/: check.sh  check_repo_hygiene.sh  install_go_tools.sh  new_adr.sh
(+82 files in other folders)
