[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "rustuary"
version = "0.1.0"
description = "Python interface for the Rustuary actuarial reserving engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0 OR MIT" }
dependencies = [
  "pyarrow>=15",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "pandas>=2", "polars>=1", "pyyaml>=6"]
pandas = ["pandas>=2"]
polars = ["polars>=1"]
excel = ["openpyxl>=3"]
plot = ["matplotlib>=3"]
yaml = ["pyyaml>=6"]
notebook = ["jupyterlab>=4", "ipykernel>=6", "ipywidgets>=8", "pyyaml>=6"]

[tool.maturin]
module-name = "rustuary._rust"
manifest-path = "rust/Cargo.toml"
python-source = "src"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
